// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Hero Hero 1`] = `
.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c1 {
  font-size: 280%;
  white-space: nowrap;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      Welcome
    </div>
  </div>
</div>
`;

exports[`Storyshots Hero SubHero 1`] = `
.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c1 {
  font-size: 20px;
  white-space: nowrap;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      Welcome
    </div>
  </div>
</div>
`;
